RIPE NCC has merged 6b63ce4
* Remove unused argument and property [9497d420]
* Keep argument names in interface [26647cbc]
* Update dependency io.freefair.lombok:io.freefair.lombok.gradle.plugin to v8 [f22209c1]
* document usage of port 9000 and debug process [ea2291da]
* Fix test [068ebcea]
* Clearer message on force update when service is still running [c9872a43]
* No need for (partial) milliseconds when displaying timestamps [894aef53]
* Use Thymeleaf instead of JavaScript to select active sidebar item [13d31449]
* stop favicon error [57d8da5e]
* Fix table expand icon disappearing [3f3495e0]
* Fix padding for fieldset [fa9a076c]
* Fix table sorting [d535c0b7]
* Humanized names for background services [6f5704d4]
* Run the resource cache update service from the resource cache page [bcb054fd]
* Ensure verification code matches latest resource differences [80d59db2]
* Require verification code to match when forcing resource cache update [a50b3788]
* Show form with verification code to force update [a926c270]
* Initial admin page to see resource cache update results [c7731c01]
* Track full results of last resource cache update attempt [8bbe3f23]